--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "framer-motion": "^12.0.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^5.4.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4"
   },
